--- a/app/index.html
+++ b/app/index.html
@@ -5,187 +5,190 @@ engine: ejs
 current: index
 ---
 
-<div class="d-flex align-items-center">
-  <h2>Admin </h2>
-  <h3 class="d-flex align-items-center">
-    <span class="material-icons">add</span>Add New Admin
-  </h3>
-   <a href="#">
-    <span class="material-icons">
-      search
-      </span>
-    <span class="material-icons">
-      notifications_active
-      </span>
-      
-   </a>
-</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col" class="d-flex align-items-center">ID
-        <span class="material-icons">
-        arrow_downward
-        </span></th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Verified  </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">#1</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
+<div class="content  d-flex ps-5 pe-5">
 
-          
-          <span class="material-icons">edit</span>
-        </a>
-      </td>  
-    </tr>
-    <tr>
-      <th scope="row">#2</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>   
-    </tr>
-    <tr>
-      <th scope="row">#3</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>   
-    </tr>
-    <tr>
-      <th scope="row">#4</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>  
-    </tr>
-    <tr>
-      <th scope="row">#5</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>    
-    </tr>
-    <tr>
-      <th scope="row">#6</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons  mr-4">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>  
-    </tr>
-    <tr>
-      <th scope="row">#7</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>   
-    </tr>
-    <tr>
-      <th scope="row">#8</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons mr-3">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>   
-    </tr>
-    <tr>
-      <th scope="row">#9</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between" >Yes
-        <a href="#">
-          <span class="material-icons">
-            visibility
-          </span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>  
-
-    </tr>
-    <tr>
-      <th scope="row">#10</th>
-      <td>Emir Wicks</td>
-      <td>emir.wicks@mail.com</td>
-      <td class="d-flex justify-content-between">Yes
-        <a href="#" class="d-flex align-items-center">
-          <span class="material-icons">visibility</span>
-          <span class="material-icons">edit</span>
-        </a>
-      </td>  
-    </tr> 
-  </tbody>
-</table>
-
-<div class="d-flex justify-content-end">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link" href="#">
-        <span class="material-icons">
-          attachment
-          </span>
-      </a>
-    </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">
-        <span class="material-icons">
-          code
-          </span>
-      </a>
-     </li>
-    </ul>
-  </nav>
-</div>
-
+    <div class="col-12  ">
+      <div class="d-flex justify-content-between  align-items-center pt-5  pb-5">
+        <div class="d-flex">
+          <h2 class="me-6 fw-bolder">Admin </h2>
+          <a href="#" class="d-flex align-items-center text-success">
+            <span class="material-icons me-2  ">add</span>
+            <h3 class="fw-bolder" >Add New Admin</h3>
+          </a>
+        </div>
+         <a href="#" class="text-dark">
+          <span class="material-icons me-3">
+            search
+            </span>
+          <span class="material-icons ">
+            notifications_active
+            </span>
+         </a>
+      </div>
+      <table class="table   table-hover  mb-5">
+        <thead>
+          <tr>
+            <th scope="col" class="">ID
+              <span class="material-icons text-success align-bottom">
+              arrow_downward
+              </span></th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Verified  </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">#1</th>
+            <td>Emir Wicks</td>
+            <td>emir.wicks@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons  me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>  
+          </tr>
+          <tr>
+            <th scope="row">#2</th>
+            <td>Zaina Goldsmith</td>
+            <td>zaina.goldsmith@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons  me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>   
+          </tr>
+          <tr>
+            <th scope="row">#3</th>
+            <td>Mahima Lopez</td>
+            <td>mahima.lopez@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons  me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>   
+          </tr>
+          <tr>
+            <th scope="row">#4</th>
+            <td>Pharrell Murray</td>
+            <td>pharrell.murray@mail.com </td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons  me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>  
+          </tr>
+          <tr>
+            <th scope="row">#5</th>
+            <td>Annika Mcbride</td>
+            <td>annika.mcbride@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>    
+          </tr>
+          <tr>
+            <th scope="row">#6</th>
+            <td>Fatimah Clark</td>
+            <td>fatimah.clark@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons  me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>  
+          </tr>
+          <tr>
+            <th scope="row">#7</th>
+            <td>Klaudia Rhodes</td>
+            <td>klaudia.rhodes@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>   
+          </tr>
+          <tr>
+            <th scope="row">#8</th>
+            <td>Tillie Lucero</td>
+            <td>tillie.lucero@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons me-4">
+                  visibility
+                </span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>   
+          </tr>
+          <tr>
+            <th scope="row">#9</th>
+            <td>Sabrina Stephenson</td>
+            <td>sabrina.stephenson@mail.com</td>
+            <td class="d-flex justify-content-between" >Yes
+              <a href="#" class="text-dark">
+                <span class="material-icons me-4">
+                  visibility
+                </span> 
+                <span class="material-icons">edit</span>
+              </a>
+            </td>  
+          </tr>
+          <tr>
+            <th scope="row">#10</th>
+            <td>Annie Smith</td>
+            <td>annie.smith@mail.com</td>
+            <td class="d-flex justify-content-between">Yes
+              <a href="#" class="d-flex align-items-center text-dark">
+                <span class="material-icons  me-4">visibility</span>
+                <span class="material-icons">edit</span>
+              </a>
+            </td>  
+          </tr> 
+        </tbody>
+      </table>
+      <div class="d-flex justify-content-end">
+        <nav aria-label="Page navigation example ">
+          <ul class="pagination ">
+            <li class="page-item"><a class="page-link border border-success" href="#">
+              <span class="material-icons">
+                chevron_left
+                </span>
+            </a>
+          </li>
+            <li class="page-item "><a class="page-link bg-success  border border-success text-white" href="#">1</a></li>
+            <li class="page-item "><a class="page-link border border-success text-dark" href="#">2</a></li>
+            <li class="page-item "><a class="page-link border border-success text-dark" href="#">3</a></li>
+            <li class="page-item  ">
+              <a class="page-link border border-success" href="#">
+                <span class="material-icons">
+                  chevron_right
+                </span>
+            </a>
+           </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
